--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Grandstander&display=swap" rel="stylesheet" />
-    <title>NOT AN AIRDROP</title>
+    <title>Mercedes On Solana</title>
     <script type="module" crossorigin src="index-czb7JlC4.js"></script>
     <link rel="stylesheet" crossorigin href="index-ExCCyFvl.css">
 </head>
