--- a/index.html
+++ b/index.html
@@ -2,19 +2,323 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="logo.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Grandstander&display=swap" rel="stylesheet" />
-    <title>Mercedes On Solana</title>
-    <script type="module" crossorigin src="index-czb7JlC4.js"></script>
-    <link rel="stylesheet" crossorigin href="index-ExCCyFvl.css">
+
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Intel On Solana</title>
+    <link rel="icon" type="image/x-icon" href="Logo.jpg">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Michroma:wght@400;700&display=swap">
+    <link rel="stylesheet" href="style.css">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
+
 </head>
 
 <body>
-    <div id="root"></div>
+    <div class="nav">
+
+        <div class="left">
+            <h1>Intel On Solana</h1>
+        </div>
+        <div class="mid">
+            <ul class="nav_holder">
+                <li>
+                    <a class="scroll-link" href="#Home">About</a>
+                </li>
+
+                <li class="border_list">
+                    <a class="scroll-link" href="#Tokenomics">Tokenomics</a>
+                </li>
+            </ul>
+        </div>
+        <div class="right">
+            <a href="https://birdeye.so/token/6xhc9egiVtLDp8SibN18xa5QFZYJ26Wu9gi4hd75pmDc?chain=solana"
+                class="">Buy</a>
+        </div>
+
+    </div>
+    <div class="phone_nav">
+        <div class="nav_wrapper">
+
+            <div class="left">
+                <img src="Logo.jpg" alt="">
+            </div>
+
+            <div class="burger-menu">
+                <div class="bar"></div>
+                <div class="bar"></div>
+                <div class="bar"></div>
+            </div>
+        </div>
+
+    </div>
+
+    <div class="expanded">
+        <ul>
+            <li><a class="navelement" href="#"><span>About</span></a></li>
+            <li><a class="navelement" href="#"><span>Tokenomics</span></a></li>
+        </ul>
+    </div>
+    <div class=""></div>
+    <div class="main">
+
+
+        <div class="Home" id="Home">
+
+            <h1>Intel On Solana</h1>
+
+            <div class="Home_Container">
+                <p>Ready to stab its way to the top of the crypto meme coin charts, and this year, it's coming for the
+                    top dogs with a fork in hand!
+                </p>
+                <div class="Buttons_container">
+                    <a href="https://dexscreener.com/solana/6xhc9egiVtLDp8SibN18xa5QFZYJ26Wu9gi4hd75pmDc"><img
+                            src="Dex.png" alt=""></i></a>
+                    <a href="https://twitter.com/DogWifForkCoin"><img src="X.png" alt=""></a>
+                    <a href="https://t.me/DogWifForkCoin"><img src="TG.png" alt=""></a>
+                </div>
+            </div>
+            <div class="svg_holder">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+                    <path fill="#5D3FD3" fill-opacity="1" d="M0,288L1440,128L1440,320L0,320Z"></path>
+                </svg>
+
+            </div>
+        </div>
+
+        <div class="About reveal " id="About">
+            <h1>Intel On Solana</h1>
+            <div>
+                <div class="About_info">
+                    <div class="About_element">
+                        <p>Dog Wif Fork! That's right, we've taken the iconic Dog Wif Hat meme and given it a twist by
+                            adding a fork. Why? Why not! And let's be honest, a dog wearing a hat is so last year. Now,
+                            imagine a dog with a fork, ready to take on the world of crypto with its sharp wit and even
+                            sharper prongs. It's the perfect combination of adorable and dangerous, just like your ex's
+                            new partner. So come on, join the Dog Wif Fork revolution.</p>
+                    </div>
+                    <div class="About_element"><img src="About.png" alt=""></div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="section_2">
+        <div class="Section_2_image"></div>
+        <div class="Tokenomics" id="Tokenomics">
+
+            <h1>TOKENOMICS THAT HIT <br> THE RIGHT NOTE!</h1>
+            <p>With a total supply of 100M $FORK tokens, our tokenomics are set to amplify your experience. No presale
+                riffs here; we’re all about the fair launch.
+                <br>
+                <br>
+                6xhc9egiVtLDp8SibN18xa5QFZYJ26Wu9gi4hd75pmDc
+            </p>
+            <div class="Box_holder">
+                <div class="Box_left">
+
+                    <div class="upper">
+                        <div class="u_element_1">
+                            <span>0%</span>
+                            <p>Buy Tax</p>
+                        </div>
+                        <div class="u_element_2">
+                            <span>0%</span>
+                            <p>Sell Tax</p>
+                        </div>
+                    </div>
+
+                    <div class="lower">
+                        <p>Ownership Renounced + Liquidity Burnt</p>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="section_3">
+        <div class="footer">
+            <div class="footer_element">
+                <h1>Intel On Solana</h1>
+                <p>Caution! $FORK is not a “get-rich-quick” scheme. Its value is based on the whims of the internet
+                    culture. Be mindful when trading and invest wisely.</p>
+            </div>
+            <div class="footer_element">
+
+                <h1>Quick Links</h1>
+                <a href="#Home">About</a>
+                <a href="#Tokenomics">Tokenomics</a>
+                <a href="#Roadmap">Roadmap</a>
+                <a href="#Inform">Inform</a>
+
+            </div>
+            <div class="footer_element">
+
+                <h1>Connect</h1>
+                <a href="https://t.me/DogWifForkCoin">Telegram</a>
+                <a href="https://twitter.com/DogWifForkCoin">Twitter</a>
+                <a href="#">Mail</a>
+
+            </div>
+
+        </div>
+        <div class="Copyright">
+
+            Intel On Solana © 2024
+        </div>
+    </div>
+
 </body>
 
-</html>
+<script>
+    window.addEventListener('scroll', reveal);
+    function reveal() {
+        var reveals = document.querySelectorAll('.reveal');
+        for (var i = 0; i < reveals.length; i++) {
+            var windowheight = window.innerHeight;
+            var revealtop = reveals[i].getBoundingClientRect().top;
+            var revealpoint = 150;
+            if (revealtop < windowheight - revealpoint) {
+                reveals[i].classList.add('active');
+            }
+            else {
+                reveals[i].classList.remove('active');
+            }
+        }
+    }
+</script>
+
+<script>
+    window.addEventListener('scroll', reveal);
+    function reveal() {
+        var reveals = document.querySelectorAll('.revealleftslight');
+        for (var i = 0; i < reveals.length; i++) {
+            var windowheight = window.innerHeight;
+            var revealtop = reveals[i].getBoundingClientRect().top;
+            var revealpoint = 150;
+            if (revealtop < windowheight - revealpoint) {
+                reveals[i].classList.add('active');
+            }
+            else {
+                reveals[i].classList.remove('active');
+            }
+        }
+    }
+</script>
+
+<script>
+    window.addEventListener('scroll', reveal);
+    function reveal() {
+        var reveals = document.querySelectorAll('.revealleft');
+        for (var i = 0; i < reveals.length; i++) {
+            var windowheight = window.innerHeight;
+            var revealtop = reveals[i].getBoundingClientRect().top;
+            var revealpoint = 150;
+            if (revealtop < windowheight - revealpoint) {
+                reveals[i].classList.add('active');
+            }
+            else {
+                reveals[i].classList.remove('active');
+            }
+        }
+    }
+</script>
+
+<script>
+    window.addEventListener('scroll', reveal);
+    function reveal() {
+        var reveals = document.querySelectorAll('.revealright');
+        for (var i = 0; i < reveals.length; i++) {
+            var windowheight = window.innerHeight;
+            var revealtop = reveals[i].getBoundingClientRect().top;
+            var revealpoint = 150;
+            if (revealtop < windowheight - revealpoint) {
+                reveals[i].classList.add('active');
+            }
+            else {
+                reveals[i].classList.remove('active');
+            }
+        }
+    }
+</script>
+
+<script>
+    window.addEventListener('scroll', reveal);
+    function reveal() {
+        var reveals = document.querySelectorAll('.revealbot');
+        for (var i = 0; i < reveals.length; i++) {
+            var windowheight = window.innerHeight;
+            var revealtop = reveals[i].getBoundingClientRect().top;
+            var revealpoint = 20;
+            if (revealtop < windowheight - revealpoint) {
+                reveals[i].classList.add('active');
+            }
+            else {
+                reveals[i].classList.remove('active');
+            }
+        }
+    }
+</script>
+
+<script>
+    window.addEventListener('scroll', function () {
+        // Calculate the percentage of how much the user has scrolled
+        const scrollPercentage = (window.scrollY / (document.documentElement.scrollHeight - window.innerHeight)) * 100;
+
+        // Calculate the desired width based on the scroll percentage
+        const desiredWidth = Math.min(80 + scrollPercentage, 100); // Adjust 80 to your desired starting width
+
+        // Update the image width
+        document.getElementById('scrollableImage').style.width = desiredWidth + '%';
+    });
+</script>
+
+
+<script>
+    function addSmoothScrolling(links) {
+        links.forEach(link => {
+            link.addEventListener('click', (e) => {
+                e.preventDefault();
+                const targetId = link.getAttribute('href').substring(1);
+                const targetElement = document.getElementById(targetId);
+
+                if (targetElement) {
+                    targetElement.scrollIntoView({
+                        behavior: 'smooth'
+                    });
+                }
+            });
+        });
+    }
+
+    const scrollLinks = document.querySelectorAll('.scroll-link');
+    addSmoothScrolling(scrollLinks);
+</script>
+
+<script>
+
+    document.addEventListener('DOMContentLoaded', function () {
+        const burgerMenu = document.querySelector('.burger-menu');
+        const menu = document.querySelector('.expanded');
+
+        burgerMenu.addEventListener('click', function (event) {
+            menu.classList.toggle('active');
+
+            document.body.style.overflow = menu.classList.contains('active') ? 'hidden' : 'auto';
+
+            event.stopPropagation();
+        });
+
+        menu.addEventListener('click', function (event) {
+            event.stopPropagation();
+        });
+
+
+        document.addEventListener('click', function () {
+            if (menu.classList.contains('active')) {
+                menu.classList.remove('active');
+                document.body.style.overflow = 'auto';
+            }
+        });
+    });
+</script>
+
+</html
