--- a/index.html
+++ b/index.html
@@ -31,8 +31,7 @@
             </ul>
         </div>
         <div class="right">
-            <a href="https://birdeye.so/token/6xhc9egiVtLDp8SibN18xa5QFZYJ26Wu9gi4hd75pmDc?chain=solana"
-                class="">Buy</a>
+            <a href="#" class="">Buy</a>
         </div>
 
     </div>
@@ -67,14 +66,13 @@
             <h1>Intel On Solana</h1>
 
             <div class="Home_Container">
-                <p>Ready to stab its way to the top of the crypto meme coin charts, and this year, it's coming for the
-                    top dogs with a fork in hand!
+                <p>Get ready for a big adventure with intel corp . We will be the next meta
                 </p>
                 <div class="Buttons_container">
                     <a href="https://dexscreener.com/solana/6xhc9egiVtLDp8SibN18xa5QFZYJ26Wu9gi4hd75pmDc"><img
                             src="Dex.png" alt=""></i></a>
-                    <a href="https://twitter.com/DogWifForkCoin"><img src="X.png" alt=""></a>
-                    <a href="https://t.me/DogWifForkCoin"><img src="TG.png" alt=""></a>
+                    <a href="https://twitter.com/IntelonSolana"><img src="X.png" alt=""></a>
+                    <a href="https://t.me/intelcorponsol"><img src="TG.png" alt=""></a>
                 </div>
             </div>
             <div class="svg_holder">
@@ -90,11 +88,12 @@
             <div>
                 <div class="About_info">
                     <div class="About_element">
-                        <p>Dog Wif Fork! That's right, we've taken the iconic Dog Wif Hat meme and given it a twist by
-                            adding a fork. Why? Why not! And let's be honest, a dog wearing a hat is so last year. Now,
-                            imagine a dog with a fork, ready to take on the world of crypto with its sharp wit and even
-                            sharper prongs. It's the perfect combination of adorable and dangerous, just like your ex's
-                            new partner. So come on, join the Dog Wif Fork revolution.</p>
+                        <p>Intel Corporation (Integrated Electronics) was founded on July 18, 1968 in Santa Clara,
+                            California, USA, is one of the world's largest semiconductor manufacturers in terms of
+                            revenue, and one of the world's largest semiconductor manufacturers. development of the x86
+                            instruction set found in most personal computers (PCs). Intel supplies processors to
+                            computer system manufacturers such as Acer, Lenovo, HP and Dell. Intel also produces
+                            motherboards, flash memory drives, and network cards.</p>
                     </div>
                     <div class="About_element"><img src="About.png" alt=""></div>
                 </div>
@@ -106,11 +105,7 @@
         <div class="Tokenomics" id="Tokenomics">
 
             <h1>TOKENOMICS THAT HIT <br> THE RIGHT NOTE!</h1>
-            <p>With a total supply of 100M $FORK tokens, our tokenomics are set to amplify your experience. No presale
-                riffs here; we’re all about the fair launch.
-                <br>
-                <br>
-                6xhc9egiVtLDp8SibN18xa5QFZYJ26Wu9gi4hd75pmDc
+            <p>With a total supply of 100M $FORK tokens, our tokenomics are set to amplify your experience.
             </p>
             <div class="Box_holder">
                 <div class="Box_left">
@@ -153,8 +148,8 @@
             <div class="footer_element">
 
                 <h1>Connect</h1>
-                <a href="https://t.me/DogWifForkCoin">Telegram</a>
-                <a href="https://twitter.com/DogWifForkCoin">Twitter</a>
+                <a href="https://t.me/intelcorponsol">Telegram</a>
+                <a href="https://twitter.com/IntelonSolana">Twitter</a>
                 <a href="#">Mail</a>
 
             </div>
