--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         <div class="Tokenomics" id="Tokenomics">
 
             <h1>TOKENOMICS THAT HIT <br> THE RIGHT NOTE!</h1>
-            <p>With a total supply of 100M $FORK tokens, our tokenomics are set to amplify your experience.
+            <p>With a total supply of 100M $INTEL tokens, our tokenomics are set to amplify your experience.
             </p>
             <div class="Box_holder">
                 <div class="Box_left">
