--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
         <div class="footer">
             <div class="footer_element">
                 <h1>Intel On Solana</h1>
-                <p>Caution! $FORK is not a “get-rich-quick” scheme. Its value is based on the whims of the internet
+                <p>Caution! $INTEL is not a “get-rich-quick” scheme. Its value is based on the whims of the internet
                     culture. Be mindful when trading and invest wisely.</p>
             </div>
             <div class="footer_element">
