--- a/index.html
+++ b/index.html
@@ -69,8 +69,7 @@
                 <p>Get ready for a big adventure with intel corp . We will be the next meta
                 </p>
                 <div class="Buttons_container">
-                    <a href="https://dexscreener.com/solana/6xhc9egiVtLDp8SibN18xa5QFZYJ26Wu9gi4hd75pmDc"><img
-                            src="Dex.png" alt=""></i></a>
+                    <a href="#"><img src="Dex.png" alt=""></i></a>
                     <a href="https://twitter.com/IntelonSolana"><img src="X.png" alt=""></a>
                     <a href="https://t.me/intelcorponsol"><img src="TG.png" alt=""></a>
                 </div>
